--- a/widget_corp/public/css/public.css
+++ b/widget_corp/public/css/public.css
@@ -93,6 +93,10 @@ ul.admin-navigation a:hover{
 #page h2 {color: #8D0D19; margin-top: 1em; }
 #page h3 { color: #8D0D19; }
 
+.page-content{
+    margin: .2em; border: 1px solid #1A446C; padding: 1em;
+}
+
 div.message{
     border: 2px solid #8D0D19;
     color: #8D0D19;
